ocaml/testsuite/tests/packs/inconsistent/main.compilers.reference
File "main.ml", line 1:
Error: The file subdir/use_member_directly.cmi is imported both as Pack.Member and as Member.
